investment controller and config tslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,15 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "outDir": "dist",
-    "lib": ["dom"],
-    "allowJs": true,
-    "baseUrl": ".",
-    "noImplicitAny": false,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
     "module": "commonjs",
+    "lib": ["es6"],
+    "allowJs": true,
+    "outDir": "build",
+    "rootDir": "src",
+    "strict": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
-    "sourceMap": true,
-    "paths": {
-      "views/*": ["./routes"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
