--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,44 +1,104 @@
+// {
+//   "settings": {
+//     "import/resolver": {
+//       "node": {
+//         "extensions": [".js", ".jsx", ".ts", ".tsx"],
+//         "moduleDirectory": ["node_modules", "src/"]
+//       }
+//     }
+//   },
+//   "env": {
+//     "browser": true,
+//     "es6": true
+//   },
+
+//   "extends": [
+//     "airbnb",
+//     "prettier",
+//     "prettier/react"
+//     // "plugin:@typescript-eslint/recommended"
+//   ],
+//   "globals": {
+//     "Atomics": "readonly",
+//     "SharedArrayBuffer": "readonly",
+//     "__DEV__": "readonly"
+//   },
+//   "parser": "@typescript-eslint/parser",
+//   "parserOptions": {
+//     "ecmaFeatures": {
+//       "jsx": true
+//     },
+//     "ecmaVersion": 2020,
+//     "sourceType": "module"
+//   },
+//   "plugins": ["react", "jsx-a11y", "import", "prettier"],
+//   "rules": {
+//     "prettier/prettier": "error",
+//     "react/jsx-filename-extension": ["warn", { "extensions": [".jsx", ".js"] }],
+//     "import/prefer-default-export": "off",
+//     "jsx-a11y/control-has-associated-label": "off",
+//     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+//     "no-console": ["error", { "allow": ["error", "info"] }],
+//     "no-param-reassign": "off",
+//     "global-require": "off",
+//     "react-native/no-raw-text": "off",
+//     "no-underscore-dangle": "off",
+//     "camelcase": "off",
+//     "react/jsx-props-no-spreading": "off",
+//     "import/no-extraneous-dependencies": "off",
+//     "no-use-before-define": "off",
+//     "no-unused-expressions": "off",
+//     "react/default-props-match-prop-types": "off",
+//     "react/no-array-index-key": "off",
+//     "jsx-a11y/label-has-associated-control": "off",
+
+//   }
+// }
+
 {
   "env": {
-    "browser": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
-
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "extends": [
+    "airbnb-base",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly",
-    "__DEV__": "readonly"
+    "SharedArrayBuffer": "readonly"
   },
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "jsx-a11y", "import", "react-hooks", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
-    "react/jsx-filename-extension": ["warn", { "extensions": [".jsx", ".js"] }],
-    "import/prefer-default-export": "off",
-    "jsx-a11y/control-has-associated-label": "off",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "no-console": ["error", { "allow": ["tron"] }],
-    "no-param-reassign": "off",
-    "global-require": "off",
-    "react-native/no-raw-text": "off",
-    "no-underscore-dangle": "off",
+    "no-console": ["error", { "allow": ["error", "info"] }],
     "camelcase": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-props-no-spreading": "off",
-    "import/no-extraneous-dependencies": "off",
-    "no-use-before-define": "off",
-    "no-unused-expressions": "off",
-    "react/default-props-match-prop-types": "off",
-    "react/no-array-index-key": "off",
-    "jsx-a11y/label-has-associated-control": "off"
+    "no-param-reassign": 1,
+    "prettier/prettier": "error",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never",
+        "mjs": "never"
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    }
   }
 }
