--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/app.js",
+    "debug": "nodemon --inspect src/app.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -14,6 +15,11 @@
     "typescript": "^3.9.6"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.31",
+    "@types/node": "^14.0.23",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
