--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.23",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
