--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.23",
